--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "moment": "~2.13.0",
+    "lodash": "~4.12.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
