--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,11 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "moment": "~2.13.0",
-    "lodash": "~4.12.0"
+    "lodash": "~4.12.0",
+    "ngInfiniteScroll": "~1.2.2",
+    "ngSmoothScroll": "~2.0.0",
+    "ng-file-upload": "~12.0.4",
+    "angular-file-upload": "~2.3.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
